# throughwaves

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
JamHub.app/Contents/: Info.plist
ThroughWaves.app/Contents/: Info.plist
ThroughWaves.app/Contents/Resources/: ThroughWaves.icns
crates/app/: Cargo.toml
crates/app/src/: about.rs  analysis_tools.rs  audio_settings.rs  effects_panel.rs  fx_browser.rs  jam_session.rs  main.rs  media_browser.rs  midi_mapping.rs  midi_panel.rs  mixer_view.rs  piano_roll.rs  platform_panel.rs  plugin_window.rs  project_info.rs  session_panel.rs  session_view.rs  shortcuts_panel.rs  spectrum.rs  stem_separator.rs  templates.rs  timeline.rs  transport_bar.rs  undo.rs  undo_panel.rs  version_control.rs
crates/engine/: Cargo.toml
crates/engine/src/: audio.rs  audio_devices.rs  audio_file.rs  clip_ops.rs  effects.rs  export.rs  input_monitor.rs  levels.rs  lib.rs  lufs.rs  metronome.rs  midi_input.rs  mixer.rs  project_io.rs  recorder.rs  spectrum_buffer.rs  synth.rs  transport.rs  vst3_host.rs  vst_host.rs  vst_loader.rs  waveform.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  project.rs  time.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  lib.rs  message.rs  server.rs  session.rs
crates/server/: Cargo.toml  schema.sql
crates/server/src/: admin.rs  auth.rs  bands.rs  cloud.rs  jam.rs  main.rs  models.rs  projects.rs  social.rs  tracks.rs
crates/server/web/: index.html
scripts/: build-release.sh
tools/stem_separator/: Dockerfile  README.md  requirements.txt  server.py
