[package]
name = "jamhub-app"
version.workspace = true
edition.workspace = true

[dependencies]
jamhub-model = { path = "../model" }
jamhub-engine = { path = "../engine" }
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
jamhub-network = { path = "../network" }
whoami = "1"
dirs = "6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
vst3 = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSResponder"] }
