[package]
name = "jamhub-engine"
version.workspace = true
edition.workspace = true

[dependencies]
jamhub-model = { path = "../model" }
cpal = "0.15"
hound = "3.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "pcm", "vorbis"] }
dirs = "5"
libloading = "0.8"
vst3 = "0.3"
midir = "0.10"
rayon = "1.10"
