[package]
name = "jamhub-network"
version.workspace = true
edition.workspace = true

[dependencies]
jamhub-model = { path = "../model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
